@@ -1,5 +1,2 @@
 [MASTER]
 load-plugins=pylint.extensions.docstyle,
-
-[testoptions]
-max_pyver=3.7
