@@ -1,5 +1,0 @@
-[MASTER]
-load-plugins=pylint.extensions.docstyle,
-
-[testoptions]
-min_pyver=3.8
